# backend-i

./: Dockerfile  README.md
.devcontainer/: devcontainer.json
djproject/: pyproject.toml
djproject/djproject/: settings.py
djproject/gym/: admin.py  forms.py  models.py  urls.py  views.py
djproject/gym/migrations/: 0002_task_user.py
djproject/gym/templates/: base.html
gym_manager/: Makefile  README.md  compose.yaml  db.sqlite3  manage.py  pyproject.toml  settings.py  urls.py  wsgi.py
gym_manager/gym_manager/: asgi.py  settings.py  urls.py
gym_manager/treinos/: admin.py  models.py  urls.py  utils.py  views.py
gym_manager/treinos/migrations/: 0004_diatreino_delete_diasemana_and_more.py  0007_alter_gymprofile_user.py
gym_manager/treinos/templates/: base.html
gym_manager/treinos/templates/gym/: gym_profile_form.html  home.html
gym_manager/treinos/templates/registration/: login.html  signup.html
gym_manager/treinos/tests/: test_main.py
session_1/: pyproject.toml
session_1/src/session_1/: call.py  main.py
session_10/: pyproject.toml
session_10/src/session_10/: http_server.py
session_11/: pyproject.toml
session_11/src/session_11/: main.py
session_11/tests/: test_main.py
session_14/: Dockerfile  Makefile  compose.yaml  db.sqlite3  pyproject.toml
session_14/djproject/: settings.py  urls.py
session_14/todo/: admin.py  forms.py  models.py  urls.py  views.py
session_2/: pyproject.toml
session_2/src/session_2/: testevar.py
session_3/: pyproject.toml
session_3/src/: store.py
session_4/: pyproject.toml
session_5/: pyproject.toml
session_5/src/: main.py
session_6/: pyproject.toml
session_6/tests/: test_sample.py
session_7/: pyproject.toml
session_7/src/: example.txt  main.py  teste.py
session_8/: pyproject.toml
session_8/tests/: test_main.py
session_9/: compose.yaml  dockerfile  pyproject.toml
session_9/bot/: pyproject.toml
session_9/bot/src/bot/: cli.py  main.py
treinos/: apps.py  forms.py  urls.py
treinos/migrations/: 0001_initial.py  0002_remove_treino_aluno_gymprofile_delete_aluno_and_more.py  0003_diasemana_alter_gymprofile_altura_and_more.py  0005_remove_diatreino_dia_diatreino_nome.py  0006_alter_diatreino_nome.py  0008_remove_gymprofile_dias_treino_delete_diatreino_and_more.py
treinos/static/: styles.css
verrrr/: Dockerfile  Makefile
verrrr/djproject/: settings.py  urls.py
verrrr/gym/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+26 files in other folders)
