[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "love4036",email = "tigasfonseca152@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "discord (>=2.3.2,<3.0.0)",
    "discord-py (>=2.5.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "bot", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
